--- a/Project React/src/css/modal.css
+++ b/Project React/src/css/modal.css
@@ -7,13 +7,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
+
 .modal-content {
   width: 500px;
   background-color: aliceblue;
   padding: 10px;
   border-radius: 10px;
 }
+
 .modal-header,
 .modal-footer {
   padding: 10px;
@@ -25,4 +28,21 @@
   padding: 10px;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
+}
+
+.buttonClose {
+  background-color: #ff6f6f;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.buttonClose:hover {
+  background-color: #ff4d4d;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
