--- a/Project React/src/css/form.css
+++ b/Project React/src/css/form.css
@@ -40,6 +40,10 @@ form {
   background-color: #218838;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+.error {
+  font-size: 12px;
+  color: red;
+}
 @media screen and (max-width: 481px) {
   .saveButton button {
     margin-top: 100px;
