--- a/Project React/src/css/form.css
+++ b/Project React/src/css/form.css
@@ -44,6 +44,28 @@ form {
   font-size: 12px;
   color: red;
 }
+#firstname,
+#lastname,
+#dateofbirth,
+#startdate,
+#street,
+#city,
+#zipcode {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  box-sizing: border-box;
+  color: #333;
+
+  outline: none;
+  padding: 8px 52px 8px 10px;
+  transition: all 200ms ease;
+}
 @media screen and (max-width: 481px) {
   .saveButton button {
     margin-top: 100px;
